exercises from class

--- a/exercises/exercise1/templates/base.html
+++ b/exercises/exercise1/templates/base.html
@@ -8,7 +8,7 @@
         <h1>Coffeeine coffee</h1>
         <nav id="main-menu" class="clearfix">
           <ul>
-            <li><a href="">home</a></li> 
+            <li><a href="">home</a></li>
             <li><a href="">products</a></li>
             <li><a href="">services</a></li>
             <li><a href="">cool stuff</a></li>
@@ -16,16 +16,16 @@
         </nav>
       </header>
       <div id="main">
-      	<img src="img/coffee.jpg" alt="" />
+        {% block main %}{% endblock %}
       </div>
       <div id="footer">
-      <nav>
-        <ul>
-          <li>team</li>
-          <li>about</li>
-          <li>careers</li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li>team</li>
+            <li>about</li>
+            <li>careers</li>
+          </ul>
+        </nav>
       </div>
     </div>
   </body>
